Bug 388748 - Account number editor is broken for IBAN/BIC but works for national account number
Summary: Account number editor is broken for IBAN/BIC but works for national account n...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-09 19:22 UTC by Thomas Baumgart
Modified: 2018-03-28 07:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Screenshot of account number editor (9.03 KB, image/png)
2018-01-09 19:22 UTC, Thomas Baumgart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2018-01-09 19:22:46 UTC
Created attachment 109771 [details]
Screenshot of account number editor

The layout of the edit fields in the account number information is broken for IBAN/BIC editor but shows correct in National Account Number. The attached screenshot shows this scenario:

an account with IBAN/BIC has been opened in the editor. The selected list item is shown (blue background) with the correct height. The edit fields are too narrow and the entry for the national account overlap (the text 'number' and 'National Account' should be printed below the blue background)

I looked around in the ibanbicdelegate.cpp and compared it to the nationalaccountdelegate.cpp but do not spot the problem. Anyone any idea?
Comment 1 wojnilowicz 2018-01-15 15:58:27 UTC
Git commit b499ac4cb1cc9ccadff249f5b72f58c596d18d45 by Łukasz Wojniłowicz.
Committed on 15/01/2018 at 15:57.
Pushed by wojnilowicz into branch '5.0'.

Fix spacing for IBAN/BIC editor
FIXED-IN:5.0

M  +1    -1    kmymoney/payeeidentifier/ibanandbic/widgets/ibanbicitemdelegate.cpp

https://commits.kde.org/kmymoney/b499ac4cb1cc9ccadff249f5b72f58c596d18d45