Fix spacing for IBAN/BIC editor

BUG:388748
FIXED-IN:5.0